# python_template

./: .example_env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.ini  example_setup.py  pyproject.toml
.example_vscode/: launch.json  settings.json
src/: example.py
